--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.bizyun</groupId>
     <artifactId>ring-buffer-trigger-parent</artifactId>
-    <version>0.1.2-SNAPSHOT</version>
+    <version>${revision}</version>
     <packaging>pom</packaging>
 
     <prerequisites>
@@ -11,6 +11,7 @@
     </prerequisites>
 
     <properties>
+        <revision>0.1.3-SNAPSHOT</revision>
         <slf4j-api.version>1.7.21</slf4j-api.version>
         <guava.version>28.1-jre</guava.version>
         <commons-lang3.version>3.8.1</commons-lang3.version>
@@ -73,7 +74,7 @@
             <dependency>
                 <groupId>com.github.bizyun</groupId>
                 <artifactId>ring-buffer-trigger</artifactId>
-                <version>${project.version}</version>
+                <version>${revision}</version>
             </dependency>
 
             <dependency>
