--- a/ring-buffer-trigger-microbench/pom.xml
+++ b/ring-buffer-trigger-microbench/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.github.bizyun</groupId>
+        <groupId>io.github.bizyun</groupId>
         <artifactId>ring-buffer-trigger-parent</artifactId>
         <version>${revision}</version>
     </parent>
@@ -18,7 +18,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.github.bizyun</groupId>
+            <groupId>io.github.bizyun</groupId>
             <artifactId>ring-buffer-trigger</artifactId>
         </dependency>
 
