--- a/ring-buffer-trigger-microbench/pom.xml
+++ b/ring-buffer-trigger-microbench/pom.xml
@@ -35,5 +35,17 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
-    
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <configuration>
+                    <skip>false</skip>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
