--- a/ring-buffer-trigger/pom.xml
+++ b/ring-buffer-trigger/pom.xml
@@ -41,4 +41,13 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
