--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     </prerequisites>
 
     <properties>
-        <revision>0.1.3-SNAPSHOT</revision>
+        <revision>0.1.5-SNAPSHOT</revision>
         <slf4j-api.version>1.7.21</slf4j-api.version>
         <guava.version>28.1-jre</guava.version>
         <commons-lang3.version>3.8.1</commons-lang3.version>
@@ -32,6 +32,7 @@
         <git-commit-id-plugin.version>2.2.6</git-commit-id-plugin.version>
         <maven-jar-plugin.version>3.2.0</maven-jar-plugin.version>
         <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
+        <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
     </properties>
 
     <parent>
@@ -332,6 +333,17 @@
                     <serverId>ossrh</serverId>
                     <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
                     <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>${maven-release-plugin.version}</version>
+                <configuration>
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
+                    <useReleaseProfile>false</useReleaseProfile>
+                    <releaseProfiles>release</releaseProfiles>
+                    <goals>deploy</goals>
                 </configuration>
             </plugin>
         </plugins>
