--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.github.bizyun</groupId>
     <artifactId>ring-buffer-trigger-parent</artifactId>
-    <version>${revision}</version>
+    <version>0.1.5</version>
     <packaging>pom</packaging>
 
     <prerequisites>
@@ -11,7 +11,7 @@
     </prerequisites>
 
     <properties>
-        <revision>0.1.5-SNAPSHOT</revision>
+        <revision>0.1.5</revision>
         <slf4j-api.version>1.7.21</slf4j-api.version>
         <guava.version>28.1-jre</guava.version>
         <commons-lang3.version>3.8.1</commons-lang3.version>
@@ -61,7 +61,8 @@
         <connection>scm:git:git@github.com:bizyun/ring-buffer-trigger.git</connection>
         <url>https://github.com/bizyun/ring-buffer-trigger.git</url>
         <developerConnection>scm:git:git@github.com:bizyun/ring-buffer-trigger.git</developerConnection>
-    </scm>
+      <tag>ring-buffer-trigger-parent-0.1.5</tag>
+  </scm>
 
     <dependencyManagement>
         <dependencies>
