--- a/ring-buffer-trigger/pom.xml
+++ b/ring-buffer-trigger/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>io.github.bizyun</groupId>
         <artifactId>ring-buffer-trigger-parent</artifactId>
-        <version>${revision}</version>
+        <version>0.1.5</version>
     </parent>
     <artifactId>ring-buffer-trigger</artifactId>
 
